[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seqfeaturizer"
version = "0.1.0"
description = "Python-only reimplementation of a sequence featurization + diff pipeline (k-mer, polyA/polyT/GC, FIMO summary, DNAshape, DeepBind wrapper)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "(generated project)"}]
keywords = ["bioinformatics", "DNA", "feature extraction", "motifs", "FIMO"]

dependencies = [
  "numpy>=1.21",
  "pandas>=1.5",
  "biopython>=1.80",
  "requests>=2.28",
  "tqdm>=4.60",
  "pyfaidx>=0.7",
  "rapidfuzz>=3.0",
]

[project.urls]
Homepage = ""

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

